--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>main.java.japacomo.CallMwsApi</mainClass>
+                        </manifest>
+                    </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -44,6 +49,7 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.7.1</version>
             </plugin>
+
         </plugins>
         <sourceDirectory>src</sourceDirectory>
         <directory>target</directory>
