--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>japacomo</groupId>
     <artifactId>JapacomoMwsManager</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -36,7 +36,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>main.java.japacomo.CallMwsApi</mainClass>
+                            <mainClass>main.java.japacomo.JapacomoCtrl</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
