--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,15 @@
 
     <groupId>java.japacomo</groupId>
     <artifactId>JapacomoMwsManager</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>1.0</version>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -51,8 +56,10 @@
             </plugin>
 
         </plugins>
-        <sourceDirectory>src</sourceDirectory>
+<!--
+        <sourceDirectory>src/main/java/japacomo</sourceDirectory>
         <directory>target</directory>
+-->
         <finalName>${project.artifactId}-${project.version}</finalName>
     </build>
     <dependencies>
@@ -63,12 +70,14 @@
             <version>1.11.610</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <!--
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+        -->
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
