implement:check seller count increment.2nd.

--- a/src/main/resources/conf/some.config.properties.sample
+++ b/src/main/resources/conf/some.config.properties.sample
@@ -1,9 +1,24 @@
+spApiEndPoint=https://sellingXXXXX.com
+
 marketID=XXXXXXXXXX
+
 clientId=amznX.XXXXXXXXXXXXXXXX
 clientSecret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 refreshToken=Atzr|XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
 accessKeyId=AKXXXXXXXXXXXXXXXXXXXXXXXX
 secretKey=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 roleArn=arn:aws:iam::XXXXXXXXXXXXXXXXXXXXXXXXXXXX
 roleSessionName=XXXXXXXXXXXXXXXXXXX
 region=XXXXXXXXXXXXXXXXXXXX
+
+timeZone=someWhere
+confIdentifier=XXX
+downloadDir=/xxx/
+
+downloadReportTypes=ReportTypeA,\
+ReportTypeB,\
+ReportTypeC
+
+asinListFilePathForCheckSellerCountIncr=/tmp/xxx.properties
+itemConditionForCheckSellerCountIncr=SomeStatus
