--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>22</source>
+                    <target>22</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -143,10 +143,12 @@
             <artifactId>guava</artifactId>
             <version>30.1-jre</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>mylibrary</groupId>
             <artifactId>sellingpartnerapi</artifactId>
             <version>1.0</version>
+        -->
             <!--
             system scope is not required.
             this dependency shoud install as local repositry.
@@ -154,7 +156,17 @@
             <scope>system</scope>
             <systemPath>${basedir}/mylib/sellingpartnerapi-aa-java-1.0-jar-with-dependencies.jar</systemPath>
             -->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>mylibrary2</groupId>
+            <artifactId>sellingpartnerapi</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/mylib/sellingpartnerapi-aa-java-1.0-jar-with-dependencies.jar</systemPath>
         </dependency>
+
+
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
@@ -176,12 +188,20 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+
 
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>9</maven.compiler.source>
-        <maven.compiler.target>9</maven.compiler.target>
-    </properties>
 
 </project>
